# reflexion-agent-boilerplate

./: .bandit  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .semgrepignore  ARCHITECTURE.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_RESEARCH_BREAKTHROUGH_REPORT.md  AUTONOMOUS_SDLC_V4_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_V5_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_V6_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_V7_RESEARCH_PAPER_DRAFT.md  BACKLOG.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Dockerfile  FINAL_AUTONOMOUS_SDLC_V5_REPORT.md  Makefile  PRODUCTION_DEPLOYMENT.md  PRODUCTION_READY_SUMMARY.md  PROJECT_CHARTER.md  README.md  RESEARCH_IMPACT_SUMMARY.md  SDLC_COMPLETION_REPORT.md  SDLC_COMPLETION_SUMMARY.md  SDLC_IMPLEMENTATION_SUMMARY.md  SECURITY.md  V6_PRODUCTION_DEPLOYMENT_GUIDE.md  WORKFLOW_SETUP.md  autonomous_sdlc_v5_scaling_demo.py  autonomous_sdlc_v5_scaling_results.json  autonomous_sdlc_v6_validation.py  bandit.toml  docker-compose.yml  (+24 more)
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  postCreate.sh  postStart.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  codeql-config.yml  dependabot.yml  project-metrics.json  pull_request_template.md  release-template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  security_vulnerability.yml
.github/workflows/: ci.yml  performance.yml  release.yml  security.yml
.terragon/: MODERNIZATION_STRATEGY.md  README.md  autonomous-executor.py  autonomous-value-engine.py  config.yaml  debt-tracker.py  implementation-summary.md  requirements.txt  value-discovery-results.json  value-discovery.py
algorithm_research/: research_reflection_type_comparison_20250809_210018_20250809_210018_raw_data.json  research_reflection_type_comparison_20250809_210018_20250809_210018_results.json  research_report_reflection_type_comparison_20250809_210018.json
benchmarks/: run_all.py  scalability_benchmark.py
compliance_data/: compliance_records.json
deployment/: DEPLOYMENT_CHECKLIST.md  Dockerfile  README.md  config.json  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  healthcheck.py  production_checklist.md
deployment/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  secret.yaml  service.yaml
deployment/production/: Dockerfile
docker/: Dockerfile.production  docker-compose.production.yml
docker/scripts/: healthcheck.py  start_production.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  COMPLIANCE.md  COMPLIANCE_FRAMEWORK.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  IMPLEMENTATION_GUIDE.md  MONITORING.md  PERFORMANCE.md  ROADMAP.md  SBOM.md  SETUP_REQUIRED.md  UPGRADE_GUIDE.md  api_documentation.md  i18n_guide.md  production_deployment_guide.md
docs/adr/: 0001-architecture-decisions-template.md  0002-reflexion-engine-design.md  0003-checkpoint-sdlc-strategy.md  001-framework-agnostic-design.md
docs/api/: openapi-config.yaml
docs/deployment/: README.md
docs/guides/: README.md  getting-started.md
docs/monitoring/: monitoring-guide.md
docs/runbooks/: incident-response.md  incident_response.md  maintenance.md
docs/workflows/: ENHANCED_README.md  README.md  advanced-security.yml.template  ci.yml.template  performance-regression.yml.template  release.yml.template  security.yml.template
examples/: advanced_production.py  autonomous_sdlc_demo.py  autonomous_sdlc_v5_demo.py  basic_usage.py  comprehensive_examples.py  comprehensive_system_demo.py  enterprise_example.py  i18n_integration_example.py  production_example.py  research_example.py  transcendent_demo.py
kubernetes/: deployment.yaml
monitoring/: prometheus.yml  reflexion_rules.yml  telemetry.py
monitoring/alerts/: advanced-alerts.yml  reflexion-alerts.yml
monitoring/dashboards/: performance-dashboard.json  reflexion-dashboard.json
monitoring/grafana/dashboards/: reflexion-overview.json
research_output/: research_iteration_optimization_20250809_210017_20250809_210017_raw_data.json  research_iteration_optimization_20250809_210017_20250809_210017_results.json  research_report_iteration_optimization_20250809_210018.json
scripts/: build.sh  cleanup_old_artifacts.py  collect-metrics.py  deploy.py  deploy.sh  generate-sbom.py  health_check.py  init-db.sql  production-deployment.sh  production-validation.py  repository-health.py  security_scan.py  update-dependencies.py
src/reflexion/: __init__.py  cli.py  prompts.py
src/reflexion/adapters/: __init__.py  autogen.py  crewai.py  langchain.py
src/reflexion/config/: __init__.py  global_config.py
src/reflexion/core/: __init__.py  adaptive.py  advanced_error_recovery.py  advanced_error_recovery_v2.py  advanced_monitoring.py  advanced_resilience_engine.py  advanced_validation.py  agent.py  agi_integration_engine.py  audit.py  auto_scaling_system.py  autonomous_consciousness_evolution.py  autonomous_scaling_engine.py  autonomous_sdlc_engine.py  autonomous_sdlc_v5_orchestrator.py  autonomous_sdlc_v6_orchestrator.py  bayesian_reflexion_optimizer.py  compliance.py  comprehensive_monitoring_system.py  comprehensive_monitoring_v2.py  engine.py  (+44 more)
tests/: basic_system_validation.py  conftest.py  test_advanced_error_recovery.py  test_autonomous_scaling.py  test_autonomous_sdlc_integration.py  test_enterprise_features.py  test_production_integration.py  test_production_system.py  test_quantum_reflexion.py  test_research_capabilities.py  test_scaling_features.py
tests/benchmark/: test_performance.py
tests/comprehensive/: test_all_generations.py  test_autonomous_sdlc_integration.py  test_production_readiness.py
tests/fixtures/: __init__.py  test_data.py
tests/helpers/: __init__.py  test_utils.py
tests/integration/: test_autogen_integration.py  test_cli.py  test_end_to_end.py  test_performance.py
tests/mocks/: __init__.py  llm_mock.py
tests/performance/: __init__.py  test_benchmarks.py
tests/unit/: test_agent.py  test_core.py  test_engine.py  test_optimized_agent.py  test_types.py
(+28 files in other folders)
